--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,4 @@
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Quicksand&display=swap" rel="stylesheet">
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Quicksand&display=swap');
+</style>
+<link rel="stylesheet" href="{{ '/assets/css/main.css' }}">
